--- a/admin.html
+++ b/admin.html
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-
+<script  type="text/javascript" src="admin.js"></script>
 
     <footer>
         <div class="footer">
