--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="index.css">
-    <script  type="text/javascript" src="./admin.js"></script>
+    <script  type="text/javascript" src="./script.js"></script>
     <!-- title -->
     <title>CTSMC - LOGIN</title>
 </head>
