--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
     </footer>
 
-    <script src="./index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
