--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="index.css">
-    <script  type="text/javascript" src="./script.js"></script>
+    
     <!-- title -->
     <title>CTSMC - LOGIN</title>
 </head>
@@ -55,6 +55,7 @@
         </div>
     </div>
 
+    <script  type="text/javascript" src="./admin.js"></script>
 
     <footer>
         <div class="footer">
