--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class='justify-center'>
-                <input type="button" class="button" value="Entrar" onclick='entrar()'>
+                <button onclick='entrar()'>Entrar</button>
             </div>
 
             <div id='msgError'>
