--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -33,131 +33,64 @@
 
         <!-- <h1 class="title">CTSMC</h1> -->
         <div class="sub-title">
-            <h3>COORDENAÇÃO TÉCNICA DE SUPRIMENTO DE MEDICAMENTOS E CORRELATOS</h3>
+            <a id="h-loc" href=""><h3>COORDENAÇÃO TÉCNICA DE SUPRIMENTO DE MEDICAMENTOS E CORRELATOS</h3></a>
         </div>
 
     </header>
 
     <div class="container">
-        <details>
-            <summary class="inicial links"><i class="fa-solid fa-bars" aria-hidden="true"></i>
-                <h4>LINKS</h4>
-            </summary>
+        <div class="menu">
 
-            <a href="https://supe.maceio.al.gov.br/pages/comum/login.faces" target="_blank">
-                <p><img class="logo-op"
-                        src="https://supe.maceio.al.gov.br/siimm-semge/imgs/logo_prefeitura.png?pfdrid_c=true"
-                        alt="logo prefeitura">SUPE</p>
+            <a class="m-link" href="#" id="links">
+                <p class="link-p">Principais Links</p>
+            </a>
+            <a class="m-link" href="#" id="notas">
+                <p class="link-p">Setor de Notas</p>
+            </a>
+            <a class="m-link" href="#" id="log">
+                <p class="link-p">Setor de Logística</p>
+            </a>
+            <a class="m-link" href="#" id="farm">
+                <p class="link-p">Farmacêuticos</p>
             </a>
 
-            <a href="http://www.licitacao.maceio.al.gov.br/pesquisar?modalidade=1&ano=2019&numero=95&objeto=&orgao=&cota=&status=" target="_blank">
-                <p><img class="logo-op"
-                        src="https://supe.maceio.al.gov.br/siimm-semge/imgs/logo_prefeitura.png?pfdrid_c=true"
-                     alt="logo prefeitura">LICITAÇÕES</p>
-            </a>
+        </div>
+        <div id="space" class="">
+
+                    <div class="contact-block">
+                        <img class="loc" src="https://maceio.al.gov.br/assets/images/location.svg" alt="">
+                        <div class="info-text">
+                            <p><strong>Secretaria Municipal de Saúde</strong></p>
+                            <p></p>
+                            <p>Rua Dias Cabral, 569 - Centro<br>CEP 57020-250 // Telefone: 82 3312-5400<br>Horário de
+                                atendimento: segunda a sexta, de 8h às 14h.</p>
+                            <p></p>
+                        </div>
+                    </div>
+
+                    <div class="contact-block">
+                        <img class="loc" src="https://maceio.al.gov.br/assets/images/location.svg" alt="">
+                        <div class="info-text">
+                            <p><strong>CTSMC</strong></p>
+                            <p></p>
+                            <p>Av. Juca Sampaio, 620 - Barro Duro<br>CEP 57040-600 // Telefone: 82 3312-5447<br>Horário de
+                                atendimento: segunda a sexta, de 7h às 19h.</p>
+                            <p></p>
+                        </div>
+                    </div>
+
+                   
+                
+        </div>
 
 
-            <a href="https://www.diariomunicipal.com.br/maceio/adesao" target="_blank">
-                <p><img class="logo-op"
-                        src="https://supe.maceio.al.gov.br/siimm-semge/imgs/logo_prefeitura.png?pfdrid_c=true"
-                        alt="logo prefeitura">DIÁRIO
-                    OFICIAL</p>
-            </a>
-
-
-
-            <a href="http://scaweb.saude.gov.br/scaweb/" target="_blank">
-                <p><img class="logo-op"
-                        src="https://supe.maceio.al.gov.br/siimm-semge/imgs/logo_prefeitura.png?pfdrid_c=true"
-                        alt="logo prefeitura">HÓRUS</p>
-            </a>
-
-
-            <a href="https://consultas.anvisa.gov.br/#/medicamentos/" target="_blank">
-                <p><img class="logo-op"
-                        src="https://supe.maceio.al.gov.br/siimm-semge/imgs/logo_prefeitura.png?pfdrid_c=true"
-                        alt="logo prefeitura">ANVISA
-                    MEDICAMENTOS</p>
-            </a>
-
-
-
-            <a href="https://consultas.anvisa.gov.br/#/saude/" target="_blank">
-                <p><img class="logo-op"
-                        src="https://supe.maceio.al.gov.br/siimm-semge/imgs/logo_prefeitura.png?pfdrid_c=true"
-                        alt="logo prefeitura">ANVISA
-                    CORRELATOS</p>
-            </a>
-        </details>
-
-        <details>
-            <summary class="inicial"><i class="fa-solid fa-bars" aria-hidden="true"></i>
-                <h4>SETOR DE NOTAS</h4>
-            </summary>
-
-
-            <details>
-                <summary class="secundario"><i class="fa-solid fa-bars" aria-hidden="true"></i>
-                    <h4>PLANILHAS</h4>
-                </summary>
-
-                <a href="https://docs.google.com/spreadsheets/d/1iGFaKFzF7flhMtvK9ozdzqMto-Ckc5SER-JGYz7ISxk/edit#gid=0"
-                    target="_blank">
-                    <p><img class="logo-op"
-                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAlElEQVR4Ae3XAQaGQBAF4LnB7JV+f4eYrbPtqLOEPVAIqvIiEQjVRPPYZNeaDxaPEK6rP6tk1thzkvnWhRnrrLIgJDTlj1UmHD66MBOIoLHdNg0QmUKSzg4Qe2KV4eyFQy5BEKc42gJUpm8D8HHAqwB3xwGvB/grcIADHOAABxgA0NVMAHsxyabVDAXRtJwi+LGq5wugBV/h89S14QAAAABJRU5ErkJggg=="
-                            alt="logo prefeitura">CONTROLE DE PROCESSOS</p>
-                </a>
-
-            </details>
-        </details>
-
-
-
-        <details>
-            <summary class="inicial"><i class="fa-solid fa-bars" aria-hidden="true"></i>
-                <h4>SETOR DE LOGÍSTICA</h4>
-            </summary>
-
-            <details>
-                <summary class="secundario"><i class="fa-solid fa-bars" aria-hidden="true"></i>
-                    <h4>PLANILHAS</h4>
-                </summary>
-                <a href="https://docs.google.com/spreadsheets/d/12nt-Tvl4Jpzye9f2D1ieC2MKq6O6jtWgUPUWH0IK5zE/edit?pli=1#gid=0"
-                    target="_blank">
-                    <p><img class="logo-op"
-                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAlElEQVR4Ae3XAQaGQBAF4LnB7JV+f4eYrbPtqLOEPVAIqvIiEQjVRPPYZNeaDxaPEK6rP6tk1thzkvnWhRnrrLIgJDTlj1UmHD66MBOIoLHdNg0QmUKSzg4Qe2KV4eyFQy5BEKc42gJUpm8D8HHAqwB3xwGvB/grcIADHOAABxgA0NVMAHsxyabVDAXRtJwi+LGq5wugBV/h89S14QAAAABJRU5ErkJggg=="
-                            alt="logo prefeitura">ROTA DIÁRIA</p>
-                </a>
-                <a href="https://docs.google.com/spreadsheets/d/1DZemm495IREQBm6mOTpERTstRZlPV0aHND8O2s5HVRo/edit#gid=1426336719"
-                    target="_blank">
-                    <p><img class="logo-op"
-                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAlElEQVR4Ae3XAQaGQBAF4LnB7JV+f4eYrbPtqLOEPVAIqvIiEQjVRPPYZNeaDxaPEK6rP6tk1thzkvnWhRnrrLIgJDTlj1UmHD66MBOIoLHdNg0QmUKSzg4Qe2KV4eyFQy5BEKc42gJUpm8D8HHAqwB3xwGvB/grcIADHOAABxgA0NVMAHsxyabVDAXRtJwi+LGq5wugBV/h89S14QAAAABJRU5ErkJggg=="
-                            alt="logo prefeitura">CONTROLE DE PRODUTIVIDADE</p>
-                </a>
-                <a href="https://docs.google.com/spreadsheets/d/10rcWazxcCs3pNh6mOXxaKS1Jb6WyAyh7xU6N8tQeVnU/edit#gid=1036754280"
-                    target="_blank">
-                    <p><img class="logo-op"
-                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAlElEQVR4Ae3XAQaGQBAF4LnB7JV+f4eYrbPtqLOEPVAIqvIiEQjVRPPYZNeaDxaPEK6rP6tk1thzkvnWhRnrrLIgJDTlj1UmHD66MBOIoLHdNg0QmUKSzg4Qe2KV4eyFQy5BEKc42gJUpm8D8HHAqwB3xwGvB/grcIADHOAABxgA0NVMAHsxyabVDAXRtJwi+LGq5wugBV/h89S14QAAAABJRU5ErkJggg=="
-                            alt="logo prefeitura">INVENTÁRIO</p>
-                </a>
-
-            </details>
-        </details>
-        <!-- <details>
-            <summary class="inicial"><i class="fa-solid fa-bars" aria-hidden="true"></i>
-                <h4>SETOR......</h4>
-            </summary>
-            <p><img class="logo-op"
-                    src="https://supe.maceio.al.gov.br/siimm-semge/imgs/logo_prefeitura.png?pfdrid_c=true"
-                    alt="logo prefeitura"><a href="#" target="">EM CONSTRUÇÃO</a></p>
-        </details> -->
     </div>
 
     <footer>
         <div class="footer">
             <H6>SECRETARIA INTERNA DE GESTÃO</H6>
             <H6>© 2023 | ETI - ESTUDOS DE TECNOLOGIA DA INFORMAÇÃO</H6>
-            <h6>VERSÃO: 1.0.0.1 (AST-02)</h6>
+            <h6>VERSÃO: 1.0.1.2 (AST-03)</h6>
         </div>
     </footer>
     <script src="../js/home.js"></script>
